# semparar-log-explorer

./: .gitignore  Makefile  README.md  pyproject.toml
app/: constants.py  handler.py  main.py  parser.py  validators.py
input-data/: example.txt
tests/: test_handler.py  test_parser.py  test_validators.py
